--- a/html/responsive2.html
+++ b/html/responsive2.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
-    
+    <h1>This is the h1</h1>
+    <h2>This is the h2</h2>
+    <h3>This is the h3</h3>
+    <h4>This is the h4</h4>
 </body>
 </html>
