--- a/html/responsive3.html
+++ b/html/responsive3.html
@@ -7,7 +7,33 @@
 
     <link rel="stylesheet" href="../css/style3.css">
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </head>
 <body>
+
+    <input class="check" type="checkbox" id="hamburger-checkbox">
+    <label class="hamburger" for="hamburger-checkbox">
+        <ion-icon name="menu-outline" class="nav-icon-hamburger"></ion-icon>
+        <ion-icon name="close-outline" class="nav-icon-close"></ion-icon>
+    </label>
+    
+    <nav class="nav-desktop">
+        <ul>
+            <li>apple</li>
+            <li>banana</li>
+            <li>pear</li>
+        </ul>
+    </nav>
+
+    <nav class="nav-mobile">
+        <ul>
+            <li>apple</li>
+            <li>banana</li>
+            <li>pear</li>
+        </ul>
+    </nav>
+    
 </body>
 </html>
